--- a/www/app/assets/css/split/style.css
+++ b/www/app/assets/css/split/style.css
@@ -26,24 +26,32 @@
 }
 
 .navbar-right {
-    font-size: .75em;
+    font-size: 1em;
     font-variant: small-caps;
     margin-right: -10px !important;
     white-space: nowrap;
 }
 
+.navbar-right a {
+    padding-left: 5px;
+}
+
 .navbar-left {
-    font-size: .75em;
+    font-size: 1em;
     font-variant: small-caps;
     margin-left: -10px !important;
 }
 
+.navbar-left a {
+    padding-right: 5px;
+}
+
 #header-report-error {
     position: absolute;
-    bottom: -5px;
+    bottom: 0px;
     right: 0;
-    font-size: 120%;
-    font-weight: 700;
+    font-size: 110%;
+    font-weight: 600;
 }
 
 body {
@@ -66,7 +74,6 @@ body {
     border: 0px;
     border-bottom: 0.01em solid black;
 }
-
 
 /* Fonts */
 
@@ -120,7 +127,7 @@ s {
         padding-left: 0px;
         padding-right: 0px;
     }
-    #philo-view>.panel-default {
+    #philo-view > .panel-default {
         border: none;
     }
 }
@@ -129,7 +136,6 @@ s {
     margin-bottom: 0px;
     z-index: 0;
 }
-
 
 /* Collocation classes */
 
@@ -188,7 +194,7 @@ s {
 }
 
 .colloc-row:nth-child(2n-1) {
-    background-color: #FAFAFA;
+    background-color: #fafafa;
 }
 
 .inactive-link {
@@ -211,7 +217,7 @@ s {
     -webkit-column-count: 4;
     -moz-column-count: 4;
     column-count: 4;
-    box-shadow: 0px .2em 8px .01em rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0.2em 8px 0.01em rgba(0, 0, 0, 0.1);
 }
 
 #filter-list button {
@@ -224,10 +230,10 @@ s {
     position: absolute;
     z-index: 100;
     padding: 20px 15px 0px 15px;
-    box-shadow: 0px .2em 8px .01em rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0.2em 8px 0.01em rgba(0, 0, 0, 0.1);
 }
 
-#query-terms>button:first-child {
+#query-terms > button:first-child {
     position: absolute;
     right: 2px;
     top: 0;
@@ -249,7 +255,6 @@ s {
     text-align: center;
 }
 
-
 /*Pages links*/
 
 .more {
@@ -264,7 +269,6 @@ s {
 .more .next {
     float: right;
 }
-
 
 /*Random stuff to be organized*/
 
@@ -296,7 +300,7 @@ s {
 }
 
 .highlight {
-    color: #EF4500;
+    color: #ef4500;
     font-weight: 400;
 }
 
@@ -308,7 +312,7 @@ s {
 #book-page .highlight {
     margin: 0px 1px;
     padding: 0px 1px;
-    background-color: #EF4500;
+    background-color: #ef4500;
     color: #fff;
 }
 
@@ -339,7 +343,7 @@ s {
 }
 
 #results-bibliography li {
-    box-shadow: 0px 0px 3px #A8A8A8;
+    box-shadow: 0px 0px 3px #a8a8a8;
     padding: 5px;
     margin-top: 8px;
     line-height: 200%;
@@ -379,7 +383,6 @@ s {
     cursor: pointer;
 }
 
-
 /*Text formatting*/
 
 span.note {
@@ -393,7 +396,7 @@ span.note {
 .xml-l::before {
     content: '';
     font-family: 'Droid Sans Mono', sans-serif;
-    font-size: .7em;
+    font-size: 0.7em;
     white-space: pre;
     width: 35px;
     display: inline-block;
@@ -409,23 +412,23 @@ span.note {
     color: #bababa;
 }
 
-.xml-l[type="split"]::before {
-    content: "";
-}
-
-.xml-milestone::before {
-    content: attr(n) "\00a0";
-    color: #909090;
-    font-family: 'Droid Sans Mono', sans-serif;
-    font-size: .6em;
-    vertical-align: .3em;
-}
-
-.xml-milestone[unit="card"]::before {
+.xml-l[type='split']::before {
     content: '';
 }
 
-.xml-lb[type="hyphenInWord"] {
+.xml-milestone::before {
+    content: attr(n) '\00a0';
+    color: #909090;
+    font-family: 'Droid Sans Mono', sans-serif;
+    font-size: 0.6em;
+    vertical-align: 0.3em;
+}
+
+.xml-milestone[unit='card']::before {
+    content: '';
+}
+
+.xml-lb[type='hyphenInWord'] {
     display: inline;
 }
 
@@ -434,7 +437,7 @@ span.note {
 }
 
 .xml-gap::after {
-    content: "*";
+    content: '*';
 }
 
 .xml-hi {
@@ -451,24 +454,22 @@ span.note {
     display: block;
 }
 
-
 /*Remove spacing before punctuation*/
 
-.xml-w[pos=","],
-.xml-w[pos="."],
-.xml-w[pos=";"],
-.xml-w[pos="?"],
-.xml-w[pos="!"],
-.xml-w[pos=":"],
-.xml-w[pos="!"] {
-    margin-left: -.25em;
+.xml-w[pos=','],
+.xml-w[pos='.'],
+.xml-w[pos=';'],
+.xml-w[pos='?'],
+.xml-w[pos='!'],
+.xml-w[pos=':'],
+.xml-w[pos='!'] {
+    margin-left: -0.25em;
 }
 
 br {
-    content: " ";
+    content: ' ';
     display: block;
 }
-
 
 /*Bootstrap customization*/
 
@@ -521,7 +522,6 @@ a.btn:hover {
     width: 300px;
 }
 
-
 /*Metadata criteria in results*/
 
 .biblio-criteria {
@@ -531,7 +531,6 @@ a.btn:hover {
 .biblio-criteria span:hover {
     cursor: pointer;
 }
-
 
 /*Autocomplete styling*/
 
@@ -546,7 +545,7 @@ a.btn:hover {
     font-weight: 300;
     overflow-y: scroll;
     max-height: 300px;
-    box-shadow: 0px .2em 8px .01em rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0.2em 8px 0.01em rgba(0, 0, 0, 0.1);
 }
 
 .ui-menu-item {
@@ -570,7 +569,6 @@ a.btn:hover {
     display: none;
 }
 
-
 /* Syntax modal styling */
 
 #syntax ul {
@@ -580,7 +578,6 @@ a.btn:hover {
 #syntax li {
     list-style-type: disc;
 }
-
 
 /*Spinner CSS*/
 
@@ -597,14 +594,14 @@ a.btn:hover {
     z-index: 1000;
 }
 
-.spinner>div {
+.spinner > div {
     width: 30px;
     height: 30px;
     background-color: #000;
     border-radius: 100%;
     display: inline-block;
-    -webkit-animation: bouncedelay .8s infinite ease-in-out;
-    animation: bouncedelay .8s infinite ease-in-out;
+    -webkit-animation: bouncedelay 0.8s infinite ease-in-out;
+    animation: bouncedelay 0.8s infinite ease-in-out;
     /* Prevent first frame from flickering when animation starts */
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
@@ -624,10 +621,10 @@ a.btn:hover {
     0%,
     80%,
     100% {
-        -webkit-transform: scale(0.0)
+        -webkit-transform: scale(0);
     }
     40% {
-        -webkit-transform: scale(1.0)
+        -webkit-transform: scale(1);
     }
 }
 
@@ -635,15 +632,14 @@ a.btn:hover {
     0%,
     80%,
     100% {
-        transform: scale(0.0);
-        -webkit-transform: scale(0.0);
+        transform: scale(0);
+        -webkit-transform: scale(0);
     }
     40% {
-        transform: scale(1.0);
-        -webkit-transform: scale(1.0);
+        transform: scale(1);
+        -webkit-transform: scale(1);
     }
 }
-
 
 /* New Spinner */
 
@@ -691,7 +687,8 @@ a.btn:hover {
 .path {
     stroke-dasharray: 1, 200;
     stroke-dashoffset: 0;
-    -webkit-animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
+    -webkit-animation: dash 1.5s ease-in-out infinite,
+        color 6s ease-in-out infinite;
     animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
     stroke-linecap: round;
 }
@@ -743,37 +740,36 @@ a.btn:hover {
 @-webkit-keyframes color {
     100%,
     0% {
-        stroke: #8F3931;
+        stroke: #8f3931;
     }
     40% {
         stroke: #15435f;
     }
     66% {
-        stroke: #58593F;
+        stroke: #58593f;
     }
     80%,
     90% {
-        stroke: #FFA319;
+        stroke: #ffa319;
     }
 }
 
 @keyframes color {
     100%,
     0% {
-        stroke: #8F3931;
+        stroke: #8f3931;
     }
     40% {
         stroke: #15435f;
     }
     66% {
-        stroke: #58593F;
+        stroke: #58593f;
     }
     80%,
     90% {
-        stroke: #FFA319;
+        stroke: #ffa319;
     }
 }
-
 
 /*Progress bar*/
 
@@ -785,7 +781,6 @@ progress-bar {
     margin-left: 15px;
     margin-right: 15px;
 }
-
 
 /*Access control*/
 
