Rename Browse by Facet to Filter by Facet

--- a/www/app/components/concordanceKwic/facets.html
+++ b/www/app/components/concordanceKwic/facets.html
@@ -4,7 +4,7 @@
         <button type="button" id="facet-header" class="btn btn-default" ng-click="toggleDisplayFacetSelection()">
             <span id="facet-menu-toggle" class="glyphicon glyphicon-menu-right" ng-if="!showFacetSelection"></span>
             <span id="facet-menu-toggle" class="glyphicon glyphicon-menu-down" ng-if="showFacetSelection"></span>
-            Browse by facet
+            Filter by facet
         </button>
         <div id="select-facets" class="list-group" ng-show="showFacetSelection">
             <div class="dropdown-header facet-divider">
