--- a/www/app/assets/css/split/default_theme.css
+++ b/www/app/assets/css/split/default_theme.css
@@ -46,6 +46,10 @@ a:hover {
     color: rgb(78, 93, 108) !important;
 }
 
+a.export-button:hover {
+    text-decoration: none !important;
+}
+
 #dico-landing-volume li, #dico-landing-alpha td {
 	color: #697683;
 	transition: all 0ms;
