--- a/www/app/components/timeSeries/timeSeries.html
+++ b/www/app/components/timeSeries/timeSeries.html
@@ -5,7 +5,7 @@
                 <div class="panel panel-default">
                     <div id="description">
                         <button type="button" id="export-results" class="btn btn-default btn-xs pull-right" data-toggle="modal" data-target="#export-dialog">
-                            Export results
+                            Export JSON
                         </button>
                         <search-arguments start-date="{{ ::startDate}}" end-date="{{ ::endDate }}"></search-arguments>
                     </div>
