--- a/www/app/components/textNavigation/textObject.html
+++ b/www/app/components/textNavigation/textObject.html
@@ -13,6 +13,7 @@
                 <div id="previous-graphics" ng-if="beforeGraphicsImgs">
                     <a href="{{ img[0] }}" large-img="{{img[1]}}" class="inline-img" ng-repeat="img in beforeGraphicsImgs track by $index" data-gallery></a>
                 </div>
+                <button id="metadata-trigger-btn" ng-click="triggerMetadataPanel()">Show metadata</button>
                 <div
                     id="metadata-frame"
                     class="metadata-frame-box-shadow"
