--- a/www/app/assets/css/split/textObjectNavigation.css
+++ b/www/app/assets/css/split/textObjectNavigation.css
@@ -683,6 +683,18 @@ b.headword[rend=center] {
   color: #fff;
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
   text-align: left;
+
+  -webkit-transition: -webkit-transform .3s ease;
+  transition: -webkit-transform .3s ease;
+  -o-transition: transform .3s ease;
+  transition: transform .3s ease;
+  transition: transform .3s ease, -webkit-transform .3s ease;
+}
+
+#metadata-panel.ng-hide {
+  -ms-transform: translateX(-100%);
+  transform: translateX(-100%);
+  -webkit-transform: translateX(-100%);
 }
 
 #metadata-panel h2 {
