--- a/www/app/assets/css/split/textObjectNavigation.css
+++ b/www/app/assets/css/split/textObjectNavigation.css
@@ -667,3 +667,72 @@ b.headword[rend=center] {
     padding-top: inherit;  /*inherit padding when image is above */
     padding-bottom: inherit;
 }
+
+/* Metadata frame on the left */
+#metadata-panel {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 9999;
+  background: #212121;
+  min-width: 250px;
+  max-width: 25%;
+  padding: 20px;
+  overflow-y: scroll;
+  color: #fff;
+  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  text-align: left;
+
+  -webkit-transition: -webkit-transform .3s ease;
+  transition: -webkit-transform .3s ease;
+  -o-transition: transform .3s ease;
+  transition: transform .3s ease;
+  transition: transform .3s ease, -webkit-transform .3s ease;
+}
+
+#metadata-panel.ng-hide {
+  -ms-transform: translateX(-100%);
+  transform: translateX(-100%);
+  -webkit-transform: translateX(-100%);
+}
+
+#metadata-panel h2 {
+    padding-left: 5px;
+    margin-bottom: 30px;
+}
+
+#metadata-toggle-btn {
+    position: fixed;
+    padding: 8px;
+    top: 50%;
+    right: 0;
+    transform: rotate(-90deg);
+    transform-origin: right bottom;
+    border-radius: 3px 3px 0px 0px;
+    transition: background-color 0.3s ease-out, color 0.3s ease-out;
+}
+
+#metadata-toggle-btn.toggled {
+    color: #fff;
+    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+    background-color: #212121;
+}
+
+.metadata-panel-box-shadow {
+  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  -ms-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  -o-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+table.metadata-table td {
+    vertical-align: top;
+    padding: 10px 5px 0 5px;
+    font-size: 1.5rem;
+}
+
+table.metadata-table tr {
+    border-bottom: 1px solid #4d4d4d;
+}
