Add button next to TOC

--- a/www/app/components/textNavigation/navigationBar.html
+++ b/www/app/components/textNavigation/navigationBar.html
@@ -10,6 +10,14 @@
                     <span class="glyphicon glyphicon-chevron-left"></span>
                 </button>
                 <button type="button" class="btn btn-primary" id="show-toc" disabled="disabled" ng-click="textNav.toggleTableOfContents()">Table of contents</button>
+                <button
+                    type="button"
+                    id="foo"
+                    class="btn btn-primary"
+                    ng-click="textNav.toggleMetadataPanel($event)"
+                >
+                {{textNav.showMetadataPanel ? "Hide Metadata" : "Show Metadata"}}
+                </button>
                 <button type="button" class="btn btn-primary" disabled="disabled" id="next-obj" ng-click="textNav.goToTextObject(textObject.next)">
                     <span class="glyphicon glyphicon-chevron-right"></span>
                 </button>
