--- a/www/app/assets/css/split/textObjectNavigation.css
+++ b/www/app/assets/css/split/textObjectNavigation.css
@@ -697,7 +697,7 @@ b.headword[rend=center] {
   -webkit-transform: translateX(-100%);
 }
 
-#metadata-panel h2 {
+#metadata-panel-header {
     padding-left: 5px;
     margin-bottom: 30px;
 }
