--- a/www/app/assets/css/split/default_theme.css
+++ b/www/app/assets/css/split/default_theme.css
@@ -50,7 +50,7 @@ a.export-button:hover {
     text-decoration: none !important;
 }
 
-a.link-on-dark:hover {
+a.link-on-dark {
     color: #fff !important;
 }
 
