--- a/www/app/assets/css/split/textObjectNavigation.css
+++ b/www/app/assets/css/split/textObjectNavigation.css
@@ -733,6 +733,11 @@ table.metadata-table td {
     font-size: 1.5rem;
 }
 
+/*source links in metadata table*/
+table.metadata-table td.metadata-source-link {
+    padding: 10px 5px 10px 5px;
+}
+
 table.metadata-table tr {
     border-bottom: 1px solid #4d4d4d;
 }
