--- a/www/app/assets/css/split/default_theme.css
+++ b/www/app/assets/css/split/default_theme.css
@@ -50,6 +50,14 @@ a.export-button:hover {
     text-decoration: none !important;
 }
 
+a.link-on-dark {
+    color: #fff !important;
+}
+
+a.link-on-dark:hover {
+    color: #adbcca !important;
+}
+
 #dico-landing-volume li, #dico-landing-alpha td {
 	color: #697683;
 	transition: all 0ms;
