Add emoji and change color of "Map All Results" button

--- a/www/app/components/concordanceKwic/concordanceKwic.html
+++ b/www/app/components/concordanceKwic/concordanceKwic.html
@@ -7,7 +7,7 @@
                             Export results
                     </button> -->
                     <button type="button" class="btn btn-default btn-xs pull-right hidden-xs"><a class="export-button" ng-href="https://cosyn-export.netlify.com?url={{ concKwic.currentURL }}" target="_blank">Export Record IDs</a></button>
-                    <button type="button" class="btn btn-default btn-xs pull-right hidden-xs"><a class="export-button" ng-href="https://cosyn.app?url={{ concKwic.currentURL }}" target="_blank">Map All Results</a></button>
+                    <button type="button" class="btn btn-primary btn-xs pull-right hidden-xs"><a class="export-button link-on-dark" ng-href="https://cosyn.app?url={{ concKwic.currentURL }}" target="_blank">📌 Map All Results</a></button>
                     <search-arguments></search-arguments>
                     <results-description description="{{ concKwic.description }}" query-status="{{ concKwic.loading }}"></results-description>
                 </div>
