--- a/www/app/assets/css/split/default_theme.css
+++ b/www/app/assets/css/split/default_theme.css
@@ -55,7 +55,7 @@ a.link-on-dark {
 }
 
 a.link-on-dark:hover {
-    color: #adbcca !important;
+    color: #bdc9d4 !important;
 }
 
 #dico-landing-volume li, #dico-landing-alpha td {
