--- a/www/app/components/concordanceKwic/concordanceKwic.html
+++ b/www/app/components/concordanceKwic/concordanceKwic.html
@@ -6,8 +6,8 @@
                     <!-- <button type="button" id="export-results" class="btn btn-default btn-xs pull-right hidden-xs" data-toggle="modal" data-target="#export-dialog">
                             Export results
                     </button> -->
-                    <button type="button" class="btn btn-default btn-xs pull-right hidden-xs"><a class="export-button" ng-href="https://cosyn-export.netlify.com?url={{ concKwic.currentURL }}" target="_blank">Export Record IDs</a></button>
-                    <button type="button" class="btn btn-primary btn-xs pull-right hidden-xs"><a class="export-button link-on-dark" ng-href="https://cosyn.app?url={{ concKwic.currentURL }}" target="_blank">📌 Map All Results</a></button>
+                    <button type="button" class="btn btn-default btn-xs pull-right hidden-xs"><a class="export-button" ng-href="https://cosyn-export.netlify.com?url={{ concKwic.currentURL }}" target="_blank">Export References</a></button>
+                    <button type="button" class="btn btn-primary btn-xs pull-right hidden-xs"><a class="export-button link-on-dark" ng-href="https://cosyn.app?url={{ concKwic.currentURL }}" target="_blank"><span style="margin-right: 8px">📌</span>Map All Results</a></button>
                     <search-arguments></search-arguments>
                     <results-description description="{{ concKwic.description }}" query-status="{{ concKwic.loading }}"></results-description>
                 </div>
